--- a/templates/partialsBack/mainBody.html.twig
+++ b/templates/partialsBack/mainBody.html.twig
@@ -139,148 +139,30 @@
 
 
               
-            <div class="col-md-12 col-lg-6">
-                <div class="mb-3 card">
-                    <div class="card-header-tab card-header">
-                        <div class="card-header-title">
-                            <i class="header-icon lnr-rocket icon-gradient bg-tempting-azure"> </i>
-                            Bandwidth Reports
-                        </div>
-                        <div class="btn-actions-pane-right">
-                            <div class="nav">
-                                <a href="javascript:void(0);"
-                                    class="border-0 btn-pill btn-wide btn-transition active btn btn-outline-alternate">Tab
-                                    1</a>
-                                <a href="javascript:void(0);"
-                                    class="ml-1 btn-pill btn-wide border-0 btn-transition  btn btn-outline-alternate second-tab-toggle-alt">Tab
-                                    2</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="tab-content">
-                        <div class="tab-pane fade active show" id="tab-eg-55">
-                            <div class="widget-chart p-3">
-                                <div style="height: 350px">
-                                    <canvas id="line-chart"></canvas>
-                                </div>
-                                <div class="widget-chart-content text-center mt-5">
-                                    <div class="widget-description mt-0 text-warning">
-                                        <i class="fa fa-arrow-left"></i>
-                                        <span class="pl-1">175.5%</span>
-                                        <span class="text-muted opacity-8 pl-1">increased server
-                                            resources</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pt-2 card-body">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="widget-content">
-                                            <div class="widget-content-outer">
-                                                <div class="widget-content-wrapper">
-                                                    <div class="widget-content-left">
-                                                        <div class="widget-numbers fsize-3 text-muted">63%
-                                                        </div>
-                                                    </div>
-                                                    <div class="widget-content-right">
-                                                        <div class="text-muted opacity-6">Generated Leads
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="widget-progress-wrapper mt-1">
-                                                    <div
-                                                        class="progress-bar-sm progress-bar-animated-alt progress">
-                                                        <div class="progress-bar bg-danger"
-                                                            role="progressbar" aria-valuenow="63"
-                                                            aria-valuemin="0" aria-valuemax="100"
-                                                            style="width: 63%;"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="widget-content">
-                                            <div class="widget-content-outer">
-                                                <div class="widget-content-wrapper">
-                                                    <div class="widget-content-left">
-                                                        <div class="widget-numbers fsize-3 text-muted">32%
-                                                        </div>
-                                                    </div>
-                                                    <div class="widget-content-right">
-                                                        <div class="text-muted opacity-6">Submitted Tickers
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="widget-progress-wrapper mt-1">
-                                                    <div
-                                                        class="progress-bar-sm progress-bar-animated-alt progress">
-                                                        <div class="progress-bar bg-success"
-                                                            role="progressbar" aria-valuenow="32"
-                                                            aria-valuemin="0" aria-valuemax="100"
-                                                            style="width: 32%;"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="widget-content">
-                                            <div class="widget-content-outer">
-                                                <div class="widget-content-wrapper">
-                                                    <div class="widget-content-left">
-                                                        <div class="widget-numbers fsize-3 text-muted">71%
-                                                        </div>
-                                                    </div>
-                                                    <div class="widget-content-right">
-                                                        <div class="text-muted opacity-6">Server Allocation
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="widget-progress-wrapper mt-1">
-                                                    <div
-                                                        class="progress-bar-sm progress-bar-animated-alt progress">
-                                                        <div class="progress-bar bg-primary"
-                                                            role="progressbar" aria-valuenow="71"
-                                                            aria-valuemin="0" aria-valuemax="100"
-                                                            style="width: 71%;"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="widget-content">
-                                            <div class="widget-content-outer">
-                                                <div class="widget-content-wrapper">
-                                                    <div class="widget-content-left">
-                                                        <div class="widget-numbers fsize-3 text-muted">41%
-                                                        </div>
-                                                    </div>
-                                                    <div class="widget-content-right">
-                                                        <div class="text-muted opacity-6">Generated Leads
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="widget-progress-wrapper mt-1">
-                                                    <div
-                                                        class="progress-bar-sm progress-bar-animated-alt progress">
-                                                        <div class="progress-bar bg-warning"
-                                                            role="progressbar" aria-valuenow="41"
-                                                            aria-valuemin="0" aria-valuemax="100"
-                                                            style="width: 41%;"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<div class="col-md-12 col-lg-6">
+  <div class="main-card mb-3 card">
+    <div class="card-header">
+      Fournisseurs par Type
+    </div>
+    <div class="card-body d-flex align-items-center justify-content-center" style="height: 370px;">
+      <canvas id="fournisseurChart" style="max-width: 100%; max-height: 100%;"></canvas>
+    </div>
+  </div>
+</div>
+
         </div>
+
+        <div class="col-md-12">
+  <div class="main-card mb-3 card">
+    <div class="card-header">
+      Revenus générés par Évènement
+    </div>
+    <div class="card-body" style="height: 450px;">
+      <canvas id="revenuChart"></canvas>
+    </div>
+  </div>
+</div>
+
         <div class="row">
             <div class="col-md-6 col-xl-4">
                 <div class="card mb-3 widget-content">
@@ -706,3 +588,101 @@
     });
     
 </script>
+<script>
+const fournisseurCtx = document.getElementById('fournisseurChart').getContext('2d');
+const fournisseurChart = new Chart(fournisseurCtx, {
+  type: 'pie',
+  data: {
+    labels: {{ fournisseurStats|map(stat => stat.type)|json_encode|raw }},
+    datasets: [{
+      label: 'Fournisseurs',
+      data: {{ fournisseurStats|map(stat => stat.count)|json_encode|raw }},
+      backgroundColor: [
+        'rgba(255, 99, 132, 0.7)', 
+        'rgba(54, 162, 235, 0.7)', 
+        'rgba(255, 206, 86, 0.7)', 
+        'rgba(75, 192, 192, 0.7)'
+      ],
+      borderColor: [
+        'rgba(255, 99, 132, 1)',
+        'rgba(54, 162, 235, 1)',
+        'rgba(255, 206, 86, 1)',
+        'rgba(75, 192, 192, 1)'
+      ],
+      borderWidth: 1
+    }]
+  },
+  options: {
+    responsive: true,
+    plugins: {
+      legend: {
+        position: 'bottom',
+        labels: {
+          font: {
+            size: 14
+          }
+        }
+      },
+      tooltip: {
+        backgroundColor: 'rgba(0,0,0,0.7)',
+        bodyFont: { size: 13 },
+        padding: 8
+      }
+    }
+  }
+});
+const revenuCtx = document.getElementById('revenuChart').getContext('2d');
+const revenuChart = new Chart(revenuCtx, {
+  type: 'bar',
+  data: {
+    labels: {{ revenuStats|map(stat => stat.event)|json_encode|raw }},
+    datasets: [{
+      label: 'Revenus (DT)',
+      data: {{ revenuStats|map(stat => stat.revenue)|json_encode|raw }},
+      backgroundColor: 'rgba(255, 206, 86, 0.8)',
+      borderColor: 'rgba(255, 206, 86, 1)',
+      borderWidth: 1,
+      borderRadius: 8
+    }]
+  },
+  options: {
+    responsive: true,
+    indexAxis: 'y', // 🔥 Horizontal
+    plugins: {
+      legend: {
+        display: false
+      },
+      tooltip: {
+        backgroundColor: 'rgba(0,0,0,0.7)',
+        titleFont: { size: 14 },
+        bodyFont: { size: 13 },
+        padding: 10
+      }
+    },
+    scales: {
+      x: {
+        beginAtZero: true,
+        ticks: {
+          callback: function(value) {
+            return value + ' DT';
+          },
+          font: {
+            size: 13
+          }
+        }
+      },
+      y: {
+        ticks: {
+          font: {
+            size: 14,
+            weight: 'bold'
+          }
+        }
+      }
+    }
+  }
+});
+
+</script>
+
+
