--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Accueil{% endblock %}
 
 {% block body %}
-{% include 'partials/indexBody.html.twig'%}
+    {% include 'partials/indexBody.html.twig' %}
 {% endblock %}
