AJOUT DE LE STAT DES ESPACES PLUS RESERVEE

--- a/templates/espace/indexBack.html.twig
+++ b/templates/espace/indexBack.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
 <div class="app-main__outer">
   <div class="app-main__inner">
+  
     <!-- Titre -->
     <div class="app-page-title">
       <div class="page-title-wrapper">
@@ -23,6 +24,51 @@
         </div>
       </div>
     </div>
+<!-- 🔥 New Statistics Cards -->
+<div class="row mb-4">
+  <div class="col-md-4">
+    <div class="card mb-3 widget-content bg-midnight-bloom">
+      <div class="widget-content-wrapper text-white">
+        <div class="widget-content-left">
+          <div class="widget-heading">Total Espaces</div>
+          <div class="widget-subheading">Nombre total d'espaces</div>
+        </div>
+        <div class="widget-content-right">
+          <div class="widget-numbers text-white"><span>{{ totalEspaces }}</span></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-4">
+    <div class="card mb-3 widget-content bg-arielle-smile">
+      <div class="widget-content-wrapper text-white">
+        <div class="widget-content-left">
+          <div class="widget-heading">Espaces avec Organisateur</div>
+          <div class="widget-subheading">Espaces reliés à un organisateur</div>
+        </div>
+        <div class="widget-content-right">
+          <div class="widget-numbers text-white"><span>{{ espacesAvecOrganisateur }}</span></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-4">
+    <div class="card mb-3 widget-content bg-grow-early">
+      <div class="widget-content-wrapper text-white">
+        <div class="widget-content-left">
+          <div class="widget-heading">Espaces sans Organisateur</div>
+          <div class="widget-subheading">Espaces sans aucun organisateur</div>
+        </div>
+        <div class="widget-content-right">
+          <div class="widget-numbers text-white"><span>{{ espacesSansOrganisateur }}</span></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- 🔥 End New Statistics -->
 
     <!-- Filtres -->
     <div class="row mb-4">
